src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Executive_Review_Meeting_Frequency__c</fullName>
        <label>Executive Review Meeting Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Biannual</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SMIAccount4_DF</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Highest_Information_Class_Handled__c</fullName>
        <label>Highest Information Class Handled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Does Not Handle Data</fullName>
                    <default>true</default>
                    <label>Does Not Handle Data</label>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Highest_Information_Class_Hosted__c</fullName>
        <label>Highest Information Class Hosted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Does Not Host Data</fullName>
                    <default>true</default>
                    <label>Does Not Host Data</label>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Highest_Inherent_Business_Rating__c</fullName>
        <label>Highest Inherent Business Impact Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Rated</fullName>
                    <default>true</default>
                    <label>Not Rated</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Highest_Inherent_CSQ_Classification__c</fullName>
        <label>Highest Inherent CSQ Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Rated</fullName>
                    <default>true</default>
                    <label>Not Rated</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Highest_Residual_Business_Rating__c</fullName>
        <label>Highest Residual Business Impact Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Rated</fullName>
                    <default>true</default>
                    <label>Not Rated</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Highest_Residual_CSQ_Classification__c</fullName>
        <label>Highest Residual CSQ Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Rated</fullName>
                    <default>true</default>
                    <label>Not Rated</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link_1_Description__c</fullName>
        <label>News Link 1 Synopsis</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Link_1_Label__c</fullName>
        <label>News Link 1 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_1__c</fullName>
        <label>News Link 1 URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_2_Description__c</fullName>
        <label>News Link 2 Synopsis</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Link_2_Label__c</fullName>
        <label>News Link 2 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_2__c</fullName>
        <label>News Link 2 URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_3_Description__c</fullName>
        <label>News Link 3 Synopsis</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Link_3_Label__c</fullName>
        <label>News Link 3 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_3__c</fullName>
        <label>News Link 3 URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Locations_Operated_In__c</fullName>
        <label>Locations Operated In</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Logo_URL__c</fullName>
        <inlineHelpText>Type the Partner logo url which has been uploaded on the document</inlineHelpText>
        <label>Logo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <formula>IF(Logo_URL__c!=null, IMAGE( Logo_URL__c , &apos;Logo&apos; , 200, 200),&quot;&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Misc_Benchmarking_Information__c</fullName>
        <label>Benchmarking Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Review_Date__c</fullName>
        <label>Most Recent Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization_Welcome_Description__c</fullName>
        <label>Organization Welcome Description</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Relationship_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SMIAccount1_DF</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Research_Institute_Name__c</fullName>
        <label>Research Institute Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Report_Label__c</fullName>
        <label>SLA Report Label</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Report_Link__c</fullName>
        <label>SLA Report Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMO_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SMIAccount3_DF</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Services_Provided__c</fullName>
        <label>Services Provided</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clinical Development Services</fullName>
                </value>
                <value>
                    <fullName>Clinical Trial Development</fullName>
                </value>
                <value>
                    <fullName>Discovery &amp; Pre-Clinical Development Services</fullName>
                </value>
                <value>
                    <fullName>Pharmacovigilance</fullName>
                </value>
                <value>
                    <fullName>Regulatory Compliance</fullName>
                </value>
                <value>
                    <fullName>Sales &amp; Marketing</fullName>
                </value>
                <value>
                    <fullName>Supply Chain Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <label>Specialty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cardiology</fullName>
                </value>
                <value>
                    <fullName>Critical Care</fullName>
                </value>
                <value>
                    <fullName>Dementia</fullName>
                </value>
                <value>
                    <fullName>Dermatology</fullName>
                </value>
                <value>
                    <fullName>Endocrinology</fullName>
                </value>
                <value>
                    <fullName>Family Practice</fullName>
                </value>
                <value>
                    <fullName>Hematology</fullName>
                </value>
                <value>
                    <fullName>Infectious Disease</fullName>
                </value>
                <value>
                    <fullName>Internal Medicine</fullName>
                </value>
                <value>
                    <fullName>Microbiology</fullName>
                </value>
                <value>
                    <fullName>Neurology</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>Ophthalmology</fullName>
                </value>
                <value>
                    <fullName>Orthopedic Surgery</fullName>
                </value>
                <value>
                    <fullName>Osteology</fullName>
                </value>
                <value>
                    <fullName>Pain Management</fullName>
                </value>
                <value>
                    <fullName>Psychiatry</fullName>
                </value>
                <value>
                    <fullName>Pulmonology</fullName>
                </value>
                <value>
                    <fullName>Respiratory Therapy</fullName>
                </value>
                <value>
                    <fullName>Rheumatoid Arthritis</fullName>
                </value>
                <value>
                    <fullName>Sleep Disorders</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sponsorship_Function__c</fullName>
        <label>Sponsorship Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Animal Health</fullName>
                </value>
                <value>
                    <fullName>Biotech</fullName>
                </value>
                <value>
                    <fullName>Consumer Health</fullName>
                </value>
                <value>
                    <fullName>Generics</fullName>
                </value>
                <value>
                    <fullName>Medical Devices</fullName>
                </value>
                <value>
                    <fullName>Pharmaceuticals</fullName>
                </value>
                <value>
                    <fullName>Vaccines</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
                <value>
                    <fullName>Tier 3+</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Review_Frequency__c</fullName>
        <label>Vendor Review Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Biannual</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>DRDP_Partners</fullName>
        <active>true</active>
        <description>Establish R&amp;D driven partnership within industry and academia to develop a robust R&amp;D pipeline to support your organizational goals.</description>
        <label>Partners</label>
    </recordTypes>
    <recordTypes>
        <fullName>DRDP_Supplier</fullName>
        <active>true</active>
        <description>Engage vendor and service providers to support your R&amp;D needs for data management, research equipment analysis, study design consultation, and explore potential joint venture opportunities.</description>
        <label>Vendor / Service Providers</label>
    </recordTypes>
    <recordTypes>
        <fullName>Research_Institutes</fullName>
        <active>true</active>
        <description>Engage public and private research institutions to collaborate with academia personnel for new insight on new therapeutics, R&amp;D techniques, and patient engagement.</description>
        <label>Research Institutes</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>